# european-power-fair-value

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: market.yaml
data/: README.md
docs/: notes.md  writeup.md
run_snapshot/: README.md  commentary_latest.txt  hold_out_meta.json  metrics.json  prompt_curve_view.json  qa_report.md  qa_summary.json  submission.csv  validation_summary.md
run_snapshot/logs/: llm_commentary.jsonl  llm_qa_rules.jsonl
src/ai/: commentary.py  llm_client.py  qa_llm.py
src/data/: smard.py
src/pipeline/: ingest.py  qa.py  report.py  train.py
